hopefully fix scrollbar width issue in windows

--- a/styles/panel.accounts.less
+++ b/styles/panel.accounts.less
@@ -192,8 +192,7 @@ table.fh-wrap {
     margin-bottom: 20px;
 
     padding: 10px;
-    background: white;
-    color: black;
+    color: white;
     .border-radius(5px);
     .box-shadow(0px 0px 4px rgba(0, 0, 0, 0.6));
 
@@ -209,6 +208,7 @@ table.fh-wrap {
     }
     &.good {
       background-color: yellow;
+      color: #707070;
     }
     &.pass {
       background-color: orange;
@@ -370,24 +370,6 @@ table.fh-wrap {
             height: 80px;
           }
         }
-
-        .credit-score {
-          width: 100%;
-          text-align: center;
-          font-weight: 500;
-          padding: 5px;
-
-          > span {
-            padding: 5px 10px 5px 10px;
-            margin-left: auto;
-            margin-right: auto;
-            .border-radius(5px);
-          }
-
-          .excellent {
-            background-color: green;
-          }
-        }
       }
 
       .transition(opacity .25s;);
@@ -533,7 +515,7 @@ table.fh-wrap {
         top: 0; right: 0; bottom: 0; left: 0;
         overflow: hidden;
         > .contents {
-          width: @navWidth + 15px; // hide scroll bar
+          width: @navWidth + 17px; // hide scroll bar
           overflow-y: scroll; // but still allow scrolling
           overflow-x: hidden;
           height: 100%;
@@ -743,23 +725,6 @@ table.fh-wrap {
         text-align: center;
         padding-top: 30px;
         font-size: 1.2em;
-      }
-    }
-
-
-    .credit-score {
-      width: 100%;
-      text-align: center;
-      font-weight: 500;
-
-      padding: 5px 10px 5px 10px;
-      margin-left: auto;
-      margin-right: auto;
-      .border-radius(5px);
-      .box-shadow(0px 0px 4px rgba(0, 0, 0, 0.6));
-
-      &.excellent {
-        background-color: green;
       }
     }
   }
