--- a/styles/panels.less
+++ b/styles/panels.less
@@ -128,7 +128,7 @@ ul.actions {
       ul {
         margin-left: 10px;
         a {
-          padding: 5px;
+          padding: 5px 10px 5px 5px;
           display: block;
           color: white;
           &.active {
